--- a/ObsidianDiscord/ObsidianDiscord.csproj
+++ b/ObsidianDiscord/ObsidianDiscord.csproj
@@ -15,16 +15,9 @@
   <ItemGroup>
     <PackageReference Include="DSharpPlus" Version="4.0.0-nightly-00747" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <!--<PackageReference Include="Obsidian.API" Version="1.0.165" ExcludeAssets="runtime">
+    <PackageReference Include="Obsidian.API" Version="1.0.180" ExcludeAssets="runtime">
       <Private>false</Private>
-    </PackageReference>-->
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="Obsidian.API">
-      <HintPath>..\..\Obsidian\Obsidian\bin\Debug\netcoreapp3.1\Obsidian.API.dll</HintPath>
-      <Private>false</Private>
-    </Reference>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
